优化QR扫描：改为手动点击扫描，提高响应速度

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <button id="captureQrBtn" class="capture-btn-large">
                         <span class="capture-inner-large"></span>
                     </button>
-                    <p class="scan-capture-hint">點擊捕捉二維碼</p>
+                    <p class="scan-capture-hint">點擊按鈕掃描二維碼</p>
                 </div>
                 <button id="stopScanBtn" class="text-btn">取消</button>
             </div>
