--- a/index.html
+++ b/index.html
@@ -250,6 +250,6 @@
     <!-- 使用纯Canvas实现的二维码库，兼容性更好 -->
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
-    <script src="app.js?v=2"></script>
+    <script src="app.js"></script>
 </body>
 </html>
