在页面底部添加版本号显示

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
         <footer>
             <p>支援 iOS Safari 11.3+ / Android Chrome 53+</p>
+            <p class="version">版本 v20260215</p>
         </footer>
     </div>
 
