chore: 更新版本号到 v1.0.1
- 更新 index.html 版本显示和脚本引用
- 在 README.md 中添加版本信息

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <footer>
             <p>支援 iOS Safari 11.3+ / Android Chrome 53+</p>
-            <p class="version">版本 v20260215</p>
+            <p class="version">版本 v1.0.1</p>
         </footer>
     </div>
 
@@ -251,6 +251,6 @@
     <!-- 使用纯Canvas实现的二维码库，兼容性更好 -->
     <script src="https://cdn.jsdelivr.net/npm/qrcode-generator@1.4.4/qrcode.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
-    <script src="app.js?v=20260215"></script>
+    <script src="app.js?v=1.0.1"></script>
 </body>
 </html>
